--- a/templates/index.html
+++ b/templates/index.html
@@ -16,13 +16,14 @@
       <header>
         <!-- Light/Dark Toggle Button -->
         <button id="themeToggle" class="icon-btn" title="Toggle Light/Dark">
-          <i class="fas fa-sun"></i>
+            <i class="fas fa-sun"></i>
         </button>
         <nav>
-          <a href="/" title="Home"><i class="fas fa-home"></i></a>
-          <a href="/upload" title="Upload Page"><i class="fas fa-upload"></i></a>
+            <a href="/" title="Home"><i class="fas fa-home"></i></a>
+            <a href="/upload" title="Upload Page"><i class="fas fa-upload"></i></a>
+            <a href="/logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
         </nav>
-      </header>
+    </header>
 
       <h1>
         <section class="section">
