--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,12 @@
           </table>
         </div>
       </section>
+
+      <!-- Side Panel for Logs -->
+      <aside id="logsPanel" class="side-panel">
+        <h2>API Logs</h2>
+        <ul id="logsList"></ul>
+      </aside>
     </div>
 
     <!-- Edit Modal -->
