--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/static/styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
-<body class="light-mode">
+<body>
     <div class="container">
         <h1>Login</h1>
         <form method="post" action="/login">
