--- a/templates/login.html
+++ b/templates/login.html
@@ -2,23 +2,39 @@
 <html>
 <head>
     <title>Login</title>
-    <link rel="stylesheet" href="/static/styles.css" />
+    <link rel="stylesheet" href="/static/styles/base.css" />
+    <link rel="stylesheet" href="/static/styles/layout.css" />
+    <link rel="stylesheet" href="/static/styles/components.css" />
+    <link rel="stylesheet" href="/static/styles/utilities.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
+    <nav class="nav-bar">
+        <div class="nav-brand">
+            FoxEngine
+            <span class="nav-title">Login</span>
+        </div>
+    </nav>
+
     <div class="container">
-        <h1>Login</h1>
         <form method="post" action="/login">
             <div class="form-group">
                 <input type="text" name="username" value="Username" required class="form-control" onfocus="if(this.value=='Username') this.value='';" onblur="if(this.value=='') this.value='Username';" />
             </div>
             <div class="form-group">
-                <input type="text" name="password"  value="Password" required class="form-control" onfocus="if(this.value=='Password') this.value='';" onblur="if(this.value=='') this.value='Password';" />
+                <input type="text" name="password" value="Password" required class="form-control" onfocus="if(this.value=='Password') this.value='';" onblur="if(this.value=='') this.value='Password';" />
             </div>
             <button type="submit" class="btn">
-                <i class="fas fa-sign-in-alt"></i>
+                <i class="fas fa-sign-in"></i>
             </button>
         </form>
+        <div id="error-message" style="color: red;"></div>
     </div>
 </body>
+    <script>
+        function submitForm() {
+            document.querySelector('form').submit();
+        }
+    </script>
 </html>
