--- a/templates/login.html
+++ b/templates/login.html
@@ -18,18 +18,18 @@
     </nav>
 
     <div class="container">
-        <form method="post" action="/login">
+        <form method="post" action="/login" class="login-form">
             <div class="form-group">
-                <input type="text" name="username" value="Username" required class="form-control" onfocus="if(this.value=='Username') this.value='';" onblur="if(this.value=='') this.value='Username';" />
+                <input type="text" name="username" placeholder="Username" required class="form-control" />
             </div>
             <div class="form-group">
-                <input type="text" name="password" value="Password" required class="form-control" onfocus="if(this.value=='Password') this.value='';" onblur="if(this.value=='') this.value='Password';" />
+                <input type="text" name="password" placeholder="Password" required class="form-control" />
             </div>
-            <button type="submit" class="btn">
-                <i class="fas fa-sign-in"></i>
+            <div id="error-message" class="status-message error d-none"></div>
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-sign-in-alt"></i> Login
             </button>
         </form>
-        <div id="error-message" style="color: red;"></div>
     </div>
 </body>
     <script>
